--- a/index.html
+++ b/index.html
@@ -1,160 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>LSAT Progress Tracker</title>
-<style>
-body{font-family:Arial, sans-serif; margin:20px; background:#f8f9fa; color:#333;}
-table{width:100%; border-collapse:collapse; margin-top:20px;}
-th,td{border:1px solid #ddd; padding:8px; text-align:center;}
-th{background-color:#e9ecef;}
-input[type="number"],input[type="text"]{width:90%; padding:4px; box-sizing:border-box;}
-.progress{height:10px; background:#e9ecef; border-radius:5px; width:100%; margin-top:4px;}
-.bar{height:100%; background:#007bff; border-radius:5px; width:0%;}
-.control{margin-top:20px;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LSAT Progress Tracker</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f5f8fa;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+    }
+    .progress {
+      height: 1rem;
+    }
+    .notes-textarea {
+      width: 100%;
+      resize: vertical;
+    }
+  </style>
 </head>
 <body>
-<h1>LSAT Progress Tracker</h1>
-<table id="tracker">
-<thead>
-<tr>
-<th>Week</th>
-<th>Date Range</th>
-<th>LR Score (out of 25)</th>
-<th>RC % Correct</th>
-<th>Notes</th>
-<th>Progress</th>
-</tr>
-</thead>
-<tbody>
-</tbody>
-</table>
-<div class="control">
-<button id="export">Export Data</button>
-<input type="file" id="import" accept=".json">
-</div>
-<script>
-const weeks = [
-{label:'Week 1',range:'Aug 12 – Aug 18',lrTarget:13,rcTarget:0.60},
-{label:'Week 2',range:'Aug 19 – Aug 25',lrTarget:15,rcTarget:0.65},
-{label:'Week 3',range:'Aug 26 – Sep 1',lrTarget:17,rcTarget:0.70},
-{label:'Week 4',range:'Sep 2 – Sep 8',lrTarget:18,rcTarget:0.72},
-{label:'Week 5',range:'Sep 9 – Sep 15',lrTarget:19,rcTarget:0.75},
-{label:'Week 6',range:'Sep 16 – Sep 22',lrTarget:20,rcTarget:0.78},
-{label:'Week 7',range:'Sep 23 – Sep 29',lrTarget:21,rcTarget:0.80},
-{label:'Week 8',range:'Sep 30 – Oct 6',lrTarget:22,rcTarget:0.80}
-];
-
-function createTable(){
-const tbody=document.querySelector('#tracker tbody');
-tbody.innerHTML='';
-weeks.forEach((wk,i)=>{
-const tr=document.createElement('tr');
-tr.innerHTML=`
-<td>${wk.label}</td>
-<td>${wk.range}</td>
-<td><input type="number" min="0" max="25" step="1" data-week-index="${i}" data-type="lr"></td>
-<td><input type="number" min="0" max="1" step="0.01" data-week-index="${i}" data-type="rc"></td>
-<td><input type="text" data-week-index="${i}" data-type="notes"></td>
-<td><div class="progress"><div class="bar"></div></div></td>
-`;
-tbody.appendChild(tr);
-});
-}
-
-function loadData(){
-const data=JSON.parse(localStorage.getItem('lsatProgress')||'{}');
-weeks.forEach((wk,i)=>{
-const lr=data['lr'+i];
-const rc=data['rc'+i];
-const notes=data['notes'+i];
-const inputs=document.querySelectorAll('input[data-week-index="'+i+'"]');
-inputs.forEach(input=>{
-if(input.getAttribute('data-type')==='lr' && lr!==undefined){
-input.value=lr;
-}
-if(input.getAttribute('data-type')==='rc' && rc!==undefined){
-input.value=rc;
-}
-if(input.getAttribute('data-type')==='notes' && notes!==undefined){
-input.value=notes;
-}
-});
-updateProgressRow(i);
-});
-}
-
-function saveData(){
-const data={};
-weeks.forEach((wk,i)=>{
-const lrVal=parseFloat(document.querySelector('input[data-week-index="'+i+'"][data-type="lr"]').value);
-const rcVal=parseFloat(document.querySelector('input[data-week-index="'+i+'"][data-type="rc"]').value);
-const notes=document.querySelector('input[data-week-index="'+i+'"][data-type="notes"]').value;
-if(!isNaN(lrVal)) data['lr'+i]=lrVal;
-if(!isNaN(rcVal)) data['rc'+i]=rcVal;
-if(notes) data['notes'+i]=notes;
-});
-localStorage.setItem('lsatProgress',JSON.stringify(data));
-weeks.forEach((wk,i)=>updateProgressRow(i));
-}
-
-function updateProgressRow(i){
-const lrInput=document.querySelector('input[data-week-index="'+i+'"][data-type="lr"]');
-const rcInput=document.querySelector('input[data-week-index="'+i+'"][data-type="rc"]');
-const lrVal=parseFloat(lrInput.value);
-const rcVal=parseFloat(rcInput.value);
-const wk=weeks[i];
-let lrProg=0;
-let rcProg=0;
-if(!isNaN(lrVal)){lrProg=Math.min(lrVal/wk.lrTarget,1);}
-if(!isNaN(rcVal)){rcProg=Math.min(rcVal/wk.rcTarget,1);}
-const progress=(lrProg+rcProg)/2;
-const bar=document.querySelectorAll('.progress .bar')[i];
-bar.style.width=(progress*100).toFixed(0)+'%';
-}
-
-function exportData(){
-const data=localStorage.getItem('lsatProgress')||'{}';
-const blob=new Blob([data],{type:'application/json'});
-const url=URL.createObjectURL(blob);
-const a=document.createElement('a');
-a.href=url;
-a.download='lsat-progress.json';
-document.body.appendChild(a);
-a.click();
-document.body.removeChild(a);
-URL.revokeObjectURL(url);
-}
-
-function importData(file){
-const reader=new FileReader();
-reader.onload=function(e){
-try{
-const importedData=JSON.parse(e.target.result);
-localStorage.setItem('lsatProgress',JSON.stringify(importedData));
-loadData();
-}catch(err){
-alert('Invalid JSON file.');
-}
-};
-reader.readAsText(file);
-}
-
-createTable();
-loadData();
-
-document.querySelector('#tracker').addEventListener('input', function(e){
-if(e.target.tagName.toLowerCase()==='input'){
-saveData();
-}
-});
-document.getElementById('export').addEventListener('click', exportData);
-document.getElementById('import').addEventListener('change', function(e){
-if(e.target.files.length>0){
-importData(e.target.files[0]);
-}
-});
-</script>
+  <div id="app" class="container">
+    <h1 class="mb-4">LSAT Progress Tracker</h1>
+    <div class="table-responsive">
+      <table class="table table-bordered align-middle">
+        <thead class="table-light">
+          <tr>
+            <th>Week</th>
+            <th>Date Range</th>
+            <th>LR Score (out of 25)</th>
+            <th>RC % Correct</th>
+            <th>Notes</th>
+            <th>Progress</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="(week, index) in weeks" :key="week.label">
+            <td>{{ week.label }}</td>
+            <td>{{ week.range }}</td>
+            <td><input type="number" class="form-control" min="0" max="25" v-model.number="week.lrScore"></td>
+            <td><input type="number" class="form-control" min="0" max="1" step="0.01" v-model.number="week.rcScore"></td>
+            <td><textarea class="form-control notes-textarea" rows="2" v-model="week.notes"></textarea></td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" :style="{width: progressPercent(week) + '%'}" :aria-valuenow="progressPercent(week)" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="mt-3 d-flex gap-2">
+      <button class="btn btn-primary" @click="saveData">Save</button>
+      <button class="btn btn-secondary" @click="exportData">Export Data</button>
+      <input class="form-control d-inline-block" type="file" accept=".json" @change="importData" style="max-width:200px;">
+    </div>
+  </div>
+  <!-- Vue 3 -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <!-- Bootstrap JS (optional for components) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const app = {
+      data() {
+        return {
+          weeks: [
+            { label:'Week 1', range:'Aug 12 – Aug 18', lrTarget:13, rcTarget:0.60, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 2', range:'Aug 19 – Aug 25', lrTarget:15, rcTarget:0.65, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 3', range:'Aug 26 – Sep 1', lrTarget:17, rcTarget:0.70, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 4', range:'Sep 2 – Sep 8', lrTarget:18, rcTarget:0.72, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 5', range:'Sep 9 – Sep 15', lrTarget:19, rcTarget:0.75, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 6', range:'Sep 16 – Sep 22', lrTarget:20, rcTarget:0.78, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 7', range:'Sep 23 – Sep 29', lrTarget:21, rcTarget:0.80, lrScore:null, rcScore:null, notes:'' },
+            { label:'Week 8', range:'Sep 30 – Oct 6', lrTarget:22, rcTarget:0.80, lrScore:null, rcScore:null, notes:'' }
+          ]
+        }
+      },
+      created() {
+        this.loadData();
+      },
+      methods: {
+        progressPercent(week) {
+          let lrProg = week.lrScore !== null ? Math.min(week.lrScore / week.lrTarget, 1) : 0;
+          let rcProg = week.rcScore !== null ? Math.min(week.rcScore / week.rcTarget, 1) : 0;
+          return ((lrProg + rcProg) / 2 * 100).toFixed(0);
+        },
+        saveData() {
+          const data = this.weeks.map(wk => ({
+            lrScore: wk.lrScore,
+            rcScore: wk.rcScore,
+            notes: wk.notes
+          }));
+          localStorage.setItem('lsatProgress', JSON.stringify(data));
+          alert('Data saved locally.');
+        },
+        loadData() {
+          const saved = JSON.parse(localStorage.getItem('lsatProgress') || 'null');
+          if (Array.isArray(saved)) {
+            saved.forEach((item, i) => {
+              if (this.weeks[i]) {
+                this.weeks[i].lrScore = item.lrScore;
+                this.weeks[i].rcScore = item.rcScore;
+                this.weeks[i].notes = item.notes;
+              }
+            });
+          }
+        },
+        exportData() {
+          const data = JSON.stringify(this.weeks.map(wk => ({
+            lrScore: wk.lrScore,
+            rcScore: wk.rcScore,
+            notes: wk.notes
+          })));
+          const blob = new Blob([data], { type:'application/json' });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = 'lsat-progress.json';
+          a.click();
+          URL.revokeObjectURL(url);
+        },
+        importData(event) {
+          const file = event.target.files[0];
+          if (!file) return;
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            try {
+              const imported = JSON.parse(e.target.result);
+              if (Array.isArray(imported)) {
+                imported.forEach((item, i) => {
+                  if (this.weeks[i]) {
+                    this.weeks[i].lrScore = item.lrScore;
+                    this.weeks[i].rcScore = item.rcScore;
+                    this.weeks[i].notes = item.notes;
+                  }
+                });
+                this.saveData();
+              }
+            } catch (err) {
+              alert('Invalid JSON file.');
+            }
+          };
+          reader.readAsText(file);
+        }
+      }
+    };
+    Vue.createApp(app).mount('#app');
+  </script>
 </body>
 </html>
